tests/snapshots/compile__wgsl_generate_checkerboard_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard1_color1: vec4f,
    u_control_checkerboard1_color2: vec4f,
    u_control_checkerboard1_frequency: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard1_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard1_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard1_color1;
    let c2 = u.u_control_checkerboard1_color2;
    return mix(c1, c2, checker);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return checkerboard1_output(uv);
}
